--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
-@tailwind utilities
+@tailwind utilities;
+
+@layer base {
+    html {
+        font-family: 'Open Sans', 'sans-serif';
+        background-color: #F4F7F6;
+        @apply scroll-smooth;
+    }
+}
