feat: Expose the registry

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -15,6 +15,10 @@
     }
 }
 
+#root {
+    position: relative;
+}
+
 .hero-image {
     background-image: url("https://d2wkbwb7am42vh.cloudfront.net/hero-mobile.jpg");
 }
